# LinuxVsCodeCmakeClangGcc

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/: engine.h  main.cpp
examples/example1/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/examples/example1/src/: main.cpp
